src/styles/_mainProductContainer.scss
@use "/src/styles/mixins" as *;
@use "/src/styles/variables" as *;

#main {
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1;

  &:hover {
    box-shadow: -5px 5px 20px rgba($color: #000000, $alpha: 0.1);
  }

  @include desktop {
    width: 70%;
    margin: 16px auto;
    margin-bottom: 32px;
    border-radius: 16px;
  }

  h2 {
    font-family: var(--modak);
    font-size: 2.5rem;
    color: var(--white-font-color);
    -webkit-text-stroke: 0.1px #000000;
    text-shadow: 2px 2px 4px rgba($color: #000000, $alpha: 0.5);

    @include desktop {
      font-size: 3rem;
    }
  }

  .productDetailsContainer {
    background-color: rgba($color: #ffffff, $alpha: 0.5);
    padding: 1rem 0 2rem 3rem;
    line-height: 0;
    display: flex;
    gap: 1rem;
    align-items: end;

    @include tablet {
      background-color: rgba($color: #ffffff, $alpha: 0);
      flex-direction: column;
      align-items: start;
    }

    h4 {
      font-size: 1.5rem;
    }

    .priceBig {
      font-size: 2rem;
      font-weight: bold;
      color: var(--alternative-font-color);
    }

    button {
      width: 100px;
      height: 50px;
      border: none;
      border-radius: 16px;
      background-color: var(--secondary-button);
      color: var(--white-font-color);
      font-size: 2rem;
      font-weight: bold;
      margin: 0.5rem 0;
      cursor: pointer;

      &:hover {
        background-color: var(--hover-button);
      }
    }
  }
}

